(Format: Year/Month/Day)
Changes for 0.9.3:
*03/05/13:
   * Fixed restoring submenus after a reconfigure (Thanks MrChuoi)
     Screen.cc, fluxbox.cc/hh
   * Added auto hide menu item to toolbar menu (Thanks MrChuoi)
     Toolbar.cc
*03/05/12:
   * Fixed basic RANDR support  (Henrik)
     Resizes toolbar and slit when root window size changes.
     Screen.hh/cc, FbRootWindow.hh/cc, FbTk/FbWindow.hh
     fluxbox.cc/hh
*03/05/11:
   * Fixed dangling m_focused_window pointer, 
     that didn't got set in Fluxbox::revertFocus   (Henrik)
     fluxbox.cc
*03/05/10:
   * Added FbRootWindow.hh/cc (Henrik)
     Screen.hh/cc, Window.cc, Workspace.cc, IconBar.cc, Slit.cc,
     fluxbox.cc, WinClient.cc, Ewmh.cc, Gnome.cc
   * Added ScreenInfo.hh/cc (Henrik)
     Screen.hh
   * Removed BaseDisplay.hh/cc (Henrik)
     BaseDisplay.hh/cc, fluxbox.hh, Window.cc/hh
--------------------------------------------------------------
Changes for 0.9.2:
*03/05/08:
   * Fixed sloppy focus for embedded tabs (Simon)
     Window.cc
   * Fixed Slit ordering bug (Henrik)
     Screen.cc
   * Fixed better command help/option
     main.cc
   * Fixed Slit redrawing bug (Henrik)
     Slit.hh/cc
*03/05/07:
   * Fix crash when detaching client that isn't active (Simon)
     Window.cc
   * Fixed transient grouping issues (transients now WinClients) (Simon)
     WinClient.hh/cc Window.hh/cc Workspace.cc Screen.cc     
   * Fixed screen problem with redrawing menus (Henrik)
     The m_screen_num wasn't set in X Window assignment operator
     FbTk/FbWindow.cc
   * Fixed check for RENDER extension before we start using it (Henrik)
     FbTk/Transparent.hh/cc
   * Fixed some bugs and minor cleaning (Thanks MrChuoi)
     fluxbox.cc, FbTk/Button.cc, FbTk/RefCount.hh
     LayerMenu.hh, 
     Resource.hh, Window.cc[focus on deiconify]
*03/05/05:
   * Added window.<button name>.unfocus.pixmap  theme item  (Henrik)
     WinButtonTheme.hh/cc, WinButton.cc